# mdurl.rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: deps.yml
demo/: Cargo.toml  webpack.config.js
demo/src/: index.pug  index.styl  lib.rs
src/: asciiset.rs  decode.rs  encode.rs  format.rs  lib.rs  parse.rs  url.rs
src/urlencode/: asciiset.rs  decode.rs  encode.rs  mod.rs
tests/: parse.rs
