[package]
name = "mdurl"
version = "0.3.1"
authors = ["Alex Kocharin <alex@kocharin.ru>"]
description = "URL parser and formatter that gracefully handles invalid input."
documentation = "https://docs.rs/mdurl"
homepage = "https://github.com/rlidwka/mdurl.rs"
repository = "https://github.com/rlidwka/mdurl.rs"
readme = "README.md"
keywords = ["url", "parser"]
license = "MIT"
categories = ["parser-implementations", "web-programming", "encoding"]
edition = "2021"

[lib]
name = "mdurl"
path = "src/lib.rs"

[dependencies]
idna      = ">= 0.1.0, < 0.4"
once_cell = ">= 1.0.1, < 2"
regex     = ">= 0.2.0, < 2"
