[package]
name = "index"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.59"
mdurl = { path = "../" }
syntect = { version = ">= 5.0.0, < 6", default-features = false, features = ["default-fancy"] }
wasm-bindgen = "0.2.82"

url="*"

[dependencies.web-sys]
version = "0.3.59"
features = [
  'CssStyleDeclaration',
  'Document',
  'DomStringMap',
  'DomTokenList',
  'Element',
  'HtmlBodyElement',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlTextAreaElement',
  'InputEvent',
  'MouseEvent',
  'Node',
  'NodeList',
  'Window',
  'console'
]
